parser-tree-sitter/upstream/test/corpus/cplus-methods.txt
================================================================================
C-plus methods in struct bodies
================================================================================

typedef struct counter_t {
  int value;
  borrowed mut char *buffer;
  pub int increment(borrowed mut *self, int amount) { self->value += amount; return 0; }
  static pub counter_t *create(int initial) { return 0; }
  priv int reset(borrowed mut *self);
  pub void render(borrowed const *self);
} counter_t;

unsigned char *allocator_cast(void *source) {
  return (warm unsigned char *)source;
}

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (field_declaration
          (primitive_type)
          (field_identifier))
        (field_declaration
          (cplus_result_annotation)
          (cplus_result_annotation)
          (primitive_type)
          (pointer_declarator
            (field_identifier)))
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier)))
                (parameter_declaration
                  (primitive_type)
                  (identifier)))))
          (compound_statement
            (expression_statement
              (assignment_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (identifier)))
            (return_statement
              (number_literal))))
        (cplus_method_definition
          (cplus_static_modifier)
          (cplus_access_modifier)
          (type_identifier)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (parameter_declaration
                  (primitive_type)
                  (identifier)))))
          (compound_statement
            (return_statement
              (number_literal))))
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier)))))))
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (type_qualifier)
                  (pointer_declarator
                    (identifier)))))))))
    (type_identifier))
  (function_definition
    (sized_type_specifier
      (primitive_type))
    (pointer_declarator
      (function_declarator
        (identifier)
        (parameter_list
          (parameter_declaration
            (primitive_type)
            (pointer_declarator
              (identifier))))))
    (compound_statement
      (return_statement
        (cast_expression
          (type_descriptor
            (cplus_result_annotation)
            (sized_type_specifier
              (primitive_type))
            (abstract_pointer_declarator))
          (identifier))))))

================================================================================
Microsoft calling-convention modifier on a C-plus method
================================================================================

typedef struct windows_abi_t {
  pub int __stdcall read(borrowed *self) { return 7; }
} windows_abi_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (ms_call_modifier)
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier))))))
          (compound_statement
            (return_statement
              (number_literal))))))
    (type_identifier)))

================================================================================
C-plus method returning a pointer to a multidimensional array
================================================================================

typedef struct matrix_return_t {
  pub int (*grid(borrowed *self))[2][2] {
    static int values[2][2] = { { 1, 2 }, { 3, 4 } };
    return &values;
  }
} matrix_return_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (array_declarator
              (array_declarator
                (parenthesized_declarator
                  (pointer_declarator
                    (function_declarator
                      (identifier)
                      (parameter_list
                        (cplus_parameter_declaration
                          (cplus_parameter_annotation)
                          (pointer_declarator
                            (identifier)))))))
                (number_literal))
              (number_literal)))
          (compound_statement
            (declaration
              (storage_class_specifier)
              (primitive_type)
              (init_declarator
                (array_declarator
                  (array_declarator
                    (identifier)
                    (number_literal))
                  (number_literal))
                (initializer_list
                  (initializer_list
                    (number_literal)
                    (number_literal))
                  (initializer_list
                    (number_literal)
                    (number_literal)))))
            (return_statement
              (pointer_expression
                (identifier)))))))
    (type_identifier)))

================================================================================
C-plus method with an array of function-pointer parameters
================================================================================

typedef struct callback_array_t {
  pub int invoke(borrowed *self, borrowed int (*callbacks[2])(int value), int value) {
    return callbacks[0](value) + callbacks[1](value);
  }
} callback_array_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier)))
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (primitive_type)
                  (function_declarator
                    (parenthesized_declarator
                      (pointer_declarator
                        (array_declarator
                          (identifier)
                          (number_literal))))
                    (parameter_list
                      (parameter_declaration
                        (primitive_type)
                        (identifier)))))
                (parameter_declaration
                  (primitive_type)
                  (identifier)))))
          (compound_statement
            (return_statement
              (binary_expression
                (call_expression
                  (subscript_expression
                    (identifier)
                    (number_literal))
                  (argument_list
                    (identifier)))
                (call_expression
                  (subscript_expression
                    (identifier)
                    (number_literal))
                  (argument_list
                    (identifier)))))))))
    (type_identifier)))

================================================================================
C-plus method with a pointer-to-array parameter
================================================================================

typedef struct array_consumer_t {
  pub int sum(borrowed *self, borrowed int (*values)[2]) {
    return values[0][0] + values[0][1] + values[1][0] + values[1][1];
  }
} array_consumer_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier)))
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (primitive_type)
                  (array_declarator
                    (parenthesized_declarator
                      (pointer_declarator
                        (identifier)))
                    (number_literal))))))
          (compound_statement
            (return_statement
              (binary_expression
                (binary_expression
                  (binary_expression
                    (subscript_expression
                      (subscript_expression
                        (identifier)
                        (number_literal))
                      (number_literal))
                    (subscript_expression
                      (subscript_expression
                        (identifier)
                        (number_literal))
                      (number_literal)))
                  (subscript_expression
                    (subscript_expression
                      (identifier)
                      (number_literal))
                    (number_literal)))
                (subscript_expression
                  (subscript_expression
                    (identifier)
                    (number_literal))
                  (number_literal))))))))
    (type_identifier)))

================================================================================
Microsoft pointer-layer modifier on a C-plus method and callback parameter
================================================================================

typedef struct windows_pointer_qualifier_t {
  pub int * __restrict read(borrowed *self) { return 0; }
  pub int invoke(borrowed *self, int (* __restrict callback)(int value)) { return callback(7); }
} windows_pointer_qualifier_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (ms_pointer_modifier
              (ms_restrict_modifier))
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier))))))
          (compound_statement
            (return_statement
              (number_literal))))
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier)))
                (parameter_declaration
                  (primitive_type)
                  (function_declarator
                    (parenthesized_declarator
                      (pointer_declarator
                        (ms_pointer_modifier
                          (ms_restrict_modifier))
                        (identifier)))
                    (parameter_list
                      (parameter_declaration
                        (primitive_type)
                        (identifier))))))))
          (compound_statement
            (return_statement
              (call_expression
                (identifier)
                (argument_list
                  (number_literal))))))))
    (type_identifier)))

================================================================================
Microsoft declaration specifier on a C-plus method
================================================================================

typedef struct windows_declspec_t {
  pub __declspec(noinline) int read(borrowed *self) { return 9; }
} windows_declspec_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (ms_declspec_modifier
            (identifier))
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (identifier)
              (parameter_list
                (cplus_parameter_declaration
                  (cplus_parameter_annotation)
                  (pointer_declarator
                    (identifier))))))
          (compound_statement
            (return_statement
              (number_literal))))))
    (type_identifier)))

================================================================================
Microsoft calling-convention modifier on a callable C-plus method declarator
================================================================================

typedef struct windows_callable_t {
  pub int (__stdcall *select(borrowed *self))(int) { return 0; }
} windows_callable_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (function_declarator
              (parenthesized_declarator
                (ms_call_modifier)
                (pointer_declarator
                  (function_declarator
                    (identifier)
                    (parameter_list
                      (cplus_parameter_declaration
                        (cplus_parameter_annotation)
                        (pointer_declarator
                          (identifier)))))))
              (parameter_list
                (parameter_declaration
                  (primitive_type)))))
          (compound_statement
            (return_statement
              (number_literal))))))
    (type_identifier)))

================================================================================
C-plus method returning a pointer to an array
================================================================================

typedef struct array_return_t {
  pub int (*row(borrowed *self))[2] {
    static int values[2] = { 17, 25 };
    return &values;
  }
} array_return_t;

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (struct_specifier
      (type_identifier)
      (field_declaration_list
        (cplus_method_definition
          (cplus_access_modifier)
          (primitive_type)
          (cplus_method_declarator
            (array_declarator
              (parenthesized_declarator
                (pointer_declarator
                  (function_declarator
                    (identifier)
                    (parameter_list
                      (cplus_parameter_declaration
                        (cplus_parameter_annotation)
                        (pointer_declarator
                          (identifier)))))))
              (number_literal)))
          (compound_statement
            (declaration
              (storage_class_specifier)
              (primitive_type)
              (init_declarator
                (array_declarator
                  (identifier)
                  (number_literal))
                (initializer_list
                  (number_literal)
                  (number_literal))))
            (return_statement
              (pointer_expression
                (identifier)))))))
    (type_identifier)))
