parser-tree-sitter/upstream/test/corpus/cplus-nested-function-pointers.txt
================================================================================
C nested function-pointer typedefs
================================================================================

typedef int (*(*factory_t)(int code))(const char *text);
typedef int (*(*(*deep_factory_t)(int code))(const char *text))(long value);

--------------------------------------------------------------------------------

(translation_unit
  (type_definition
    (primitive_type)
    (function_declarator
      (parenthesized_declarator
        (pointer_declarator
          (function_declarator
            (parenthesized_declarator
              (pointer_declarator
                (type_identifier)))
            (parameter_list
              (parameter_declaration
                (primitive_type)
                (identifier))))))
      (parameter_list
        (parameter_declaration
          (type_qualifier)
          (primitive_type)
          (pointer_declarator
            (identifier))))))
  (type_definition
    (primitive_type)
    (function_declarator
      (parenthesized_declarator
        (pointer_declarator
          (function_declarator
            (parenthesized_declarator
              (pointer_declarator
                (function_declarator
                  (parenthesized_declarator
                    (pointer_declarator
                      (type_identifier)))
                  (parameter_list
                    (parameter_declaration
                      (primitive_type)
                      (identifier))))))
            (parameter_list
              (parameter_declaration
                (type_qualifier)
                (primitive_type)
                (pointer_declarator
                  (identifier)))))))
      (parameter_list
        (parameter_declaration
          (sized_type_specifier)
          (identifier))))))
